sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:10: error: ';' expected but 'while' found.
		} while (!sorted)
                  ^AlgBubbleSort2:13: error: 'while' expected but '}' found.
}
^